Minor change to base template.

--- a/applications/base.html
+++ b/applications/base.html
@@ -27,7 +27,7 @@
     CSS and JS and will change when the cache is cleared on
     the site.
     
-    So, if your links are MinnPost red, then you'll probably
+    So, if your links are NOT MinnPost red, then you'll probably
     have to update this.
   -->
   
