Adding number style.

--- a/applications/template-base.html
+++ b/applications/template-base.html
@@ -107,6 +107,10 @@
         line-height: 100%;
       }
       
+      .interactive-container .number {
+        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      }
+      
       /**
        * Begin custom styles.
        */
