Fixing references to CSS.

--- a/template-application/root/index-build.html
+++ b/template-application/root/index-build.html
@@ -42,6 +42,7 @@
     </style>
     <!--[if lte IE 8]>
       <style type="text/css">
+        @import url('./dist/{%= name %}.libs.ie.css');
         @import url('./dist/{%= name %}.latest.ie.css');
       </style>
     <![endif]-->
