--- a/template-application/root/index.html
+++ b/template-application/root/index.html
@@ -44,11 +44,11 @@
 
     <!-- Application CSS -->
     <style type="text/css">
-      @import url('./css/compiled/main.css');
+      @import url('./css/styles.css');
     </style>
     <!--[if lte IE 8]>
       <style type="text/css">
-        @import url('./css/compiled/main.ie.css');
+        @import url('./css/styles.ie.css');
       </style>
     <![endif]-->
 
