--- a/template-application/root/index-deploy.html
+++ b/template-application/root/index-deploy.html
@@ -42,6 +42,7 @@
     </style>
     <!--[if lte IE 8]>
       <style type="text/css">
+        @import url('https://s3.amazonaws.com/data.minnpost/projects/{%= name %}/{%= name %}.libs.ie.css');
         @import url('https://s3.amazonaws.com/data.minnpost/projects/{%= name %}/{%= name %}.latest.ie.css');
       </style>
     <![endif]-->
